crates/osp-core/tests/compile_fail/cP3_cross_family_hint_literal.stderr
error[E0451]: fields `from_family`, `to_family` and `axis_candidates` of struct `CrossFamilyHint` are private
  --> tests/compile_fail/cP3_cross_family_hint_literal.rs:9:9
   |
 8 |     let _hint = CrossFamilyHint {
   |                 --------------- in this type
 9 |         from_family: PositionFamily::ConceptualIntent,
   |         ^^^^^^^^^^^ private field
10 |         to_family: PositionFamily::PhysicalCode,
   |         ^^^^^^^^^ private field
11 |         axis_candidates: vec![],
   |         ^^^^^^^^^^^^^^^ private field
